# cli-compose

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  renovate.json  tarpaulin.toml
.github/workflows/: clippy.yml  coverage.yml  rustfmt.yml  test.yml
cli-compose-macro/: Cargo.toml
cli-compose-macro/src/: define_cli.rs  deriver.rs  lib.rs  parser.rs  use_cli.rs
cli-compose-macro/src/define_cli/: cli_def.rs  cli_defs.rs
cli-compose-macro/src/deriver/: arg_opt.rs  cli.rs  from_kebab_str.rs  multi_select.rs  opt.rs  pos_arg.rs
cli-compose-macro/src/deriver/arg_opt/: result.rs
cli-compose-macro/src/deriver/pos_arg/: result.rs
cli-compose-macro/src/deriver/snapshots/: cli_compose_macro__deriver__arg_opt__tests__struct_with_single_field.snap  cli_compose_macro__deriver__arg_opt__tests__struct_without_field.snap
cli-compose-macro/src/parser/: arg_kind.rs  field_schema.rs  macro_input.rs  modifier.rs  schema.rs
cli-compose-macro/src/snapshots/: cli_rs_macro__attr_meta__tests__extract_meta.snap
cli-rs-macro/: Cargo.toml
cli-rs-macro/src/: attr_meta.rs  doc.rs  kebab_case.rs  lib.rs  parse.rs  parser.rs
cli-rs-macro/src/deriver/: arg_opt.rs  from_kebab_str.rs  group.rs  opt.rs  pos_arg.rs
cli-rs-macro/src/deriver/arg_opt/: attr.rs
cli-rs-macro/src/deriver/opt/: result.rs
cli-rs-macro/src/parser/: arg_kind.rs  field_schema.rs  modifiers.rs  schema.rs
cli-rs-macro/src/snapshots/: cli_rs_macro__attr_meta__tests__extract_meta.snap
crates/cli-rs/: Cargo.toml
crates/cli-rs-macro/: Cargo.toml
crates/cli-rs-macro/src/: arg.rs  arg_group.rs  arg_opt.rs  attr_meta.rs  doc.rs  flag.rs  flag_arg.rs  from_kebab_str.rs  group.rs  kebab_case.rs  lib.rs  opt.rs  parse.rs  pos_arg.rs
crates/cli-rs-macro/src/arg_opt/: attr.rs  result.rs
crates/cli-rs-macro/src/deriver/opt/: attr.rs
crates/cli-rs-macro/src/deriver/pos_arg/: attr.rs
crates/cli-rs-macro/src/opt/: attr.rs  result.rs
crates/cli-rs-macro/src/pos_arg/: attr.rs  result.rs
crates/cli-rs/src/: lib.rs
crates/cli_rs/: Cargo.toml
crates/cli_rs/src/: lib.rs
crates/playground/: Cargo.toml
crates/playground/src/: main.rs
dhall/: Cargo.toml  cli.dhall  color.dhall  point.dhall
dhall/src/: main.rs
docs/: 00-get-started.md  00-install.md  01-pos-arg.md  01-syntax.md  02-arg-opt.md  02-flag-arg.md  02-opt-arg.md  02-pos-arg.md  03-flag.md  03-opt.md  04-group.md  04-opt.md  05-group.md
example/: Cargo.toml  build.rs
example/opts/: Cargo.toml
example/src/: main.rs
macro/: Cargo.toml
macro/src/: define_cli.rs  lib.rs  pretty_print.rs  use_cli.rs
macro/src/deriver/: arg_opt.rs  cli.rs  from_kebab_str.rs  opt.rs  pos_arg.rs  single_select.rs
macro/src/deriver/snapshots/: cli_compose_macro__deriver__arg_opt__tests___enum.snap  cli_compose_macro__deriver__arg_opt__tests___union.snap  cli_compose_macro__deriver__arg_opt__tests__empty.snap  cli_compose_macro__deriver__arg_opt__tests__empty_enum.snap  cli_compose_macro__deriver__arg_opt__tests__enum_without_variant.snap  cli_compose_macro__deriver__arg_opt__tests__struct_with_multiple_fields.snap  cli_compose_macro__deriver__arg_opt__tests__struct_with_single_field.snap  cli_compose_macro__deriver__arg_opt__tests__struct_without_field.snap  cli_compose_macro__deriver__cli__tests__derive_cli.snap  cli_compose_macro__deriver__cli__tests__empty.snap  cli_compose_macro__deriver__cli__tests__empty_struct.snap  cli_compose_macro__deriver__from_kebab_str__tests___enum.snap  cli_compose_macro__deriver__from_kebab_str__tests___struct.snap  cli_compose_macro__deriver__from_kebab_str__tests___union.snap  cli_compose_macro__deriver__from_kebab_str__tests__empty.snap  cli_compose_macro__deriver__opt__tests__empty.snap  cli_compose_macro__deriver__pos_arg__tests__empty.snap  cli_compose_macro__deriver__pos_arg__tests__struct_with_multiple_fields.snap  cli_compose_macro__deriver__pos_arg__tests__struct_with_single_field.snap  cli_compose_macro__deriver__pos_arg__tests__struct_without_field.snap
macro/src/snapshots/: cli_compose_macro__use_cli__tests__use_cli.snap
playground/: Cargo.toml  build.rs
playground/binary/: Cargo.toml  build.rs
playground/binary/src/: main.rs
playground/opts/: Cargo.toml
playground/opts/src/: lib.rs
playground/src/: main.rs
src/: codegen.rs  lib.rs  runtime.rs  schema.rs  schema_impl.rs
src/snapshots/: cli_compose__runtime__tests__long_flag.snap  cli_compose__runtime__tests__parse_into_tokens.snap  cli_compose__runtime__tests__short_flags.snap
