[workspace]
members = [
    "macro",
    "playground",
    "playground/opts",
]
default-members = [ "macro" ]

[package]
name = "cli-compose"
version = "0.1.0"
description = "Composable, strict CLI parser with compile-time analysis for Rust"
authors = ["Kodai Matsumoto <nobita.0918@gmail.com>"]
repository = "https://github.com/0918nobita/cli-compose"
categories = ["command-line-interface"]
keywords = [
    "argument",
    "cli",
    "arg",
    "parser",
    "parse",
]
edition = "2021"
license = "MIT"
readme = "README.md"
include = [
    "src/**/*",
    "Cargo.toml",
    "Cargo.lock",
    "LICENSE",
    "README.md",
]

[features]
codegen = []
runtime = []
schema = []

[dependencies]
cli-compose-macro = { path = "./macro" }
derive_more = "0.99.17"
str-macro = "1.0.0"

[dev-dependencies]
insta = "1.13.0"

[profile.release]
lto = true
codegen-units = 1
