[workspace]
members = [
    "dhall",
    "macro",
    "example",
    "example/opts",
]
default-members = [ "macro" ]

[package]
name = "cli-compose"
version = "0.1.0-alpha.0"
description = "Composable, strict CLI framework with static analysis for Rust"
authors = ["Kodai Matsumoto <nobita.0918@gmail.com>"]
repository = "https://github.com/0918nobita/cli-compose"
categories = ["command-line-interface"]
keywords = [
    "argument",
    "cli",
    "arg",
    "parser",
    "parse",
]
edition = "2021"
license = "MIT"
readme = "README.md"
include = [
    "src/**/*",
    "Cargo.toml",
    "Cargo.lock",
    "LICENSE",
    "README.md",
]

[features]
codegen = []
runtime = []
schema = []

[dependencies]
anyhow = "1.0.57"
cli-compose-macro = { path = "./macro" }
convert_case = "0.5.0"
derive_more = "0.99.17"
proc-macro2 = "1.0.38"
quote = "1.0.18"
str-macro = "1.0.0"
thiserror = "1.0.31"

[dependencies.syn]
version = "1.0.94"
features = ["full", "extra-traits"]

[dev-dependencies]
insta = "1.14.0"

[profile.release]
lto = true
codegen-units = 1
