[package]
name = "cli-compose-macro"
version = "0.1.0"
authors = ["Kodai Matsumoto <nobita.0918@gmail.com>"]
license = "MIT"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.5.0"
darling = "0.13.1"
derive_more = "0.99.17"
proc-macro2 = "1.0.36"
quote = "1.0.15"

[dependencies.syn]
version = "1.0.86"
features = ["full", "extra-traits"]
