[package]
name = "example"
version = "0.1.0-alpha.0"
authors = ["Kodai Matsumoto <nobita.0918@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
cli-compose = { path = "../", features = [ "runtime" ] }
example-opts = { path = "./opts" }

[build-dependencies]
cli-compose = { path = "../", features = [ "codegen" ] }
example-opts = { path = "./opts" }
