[package]
name = "cli-compose-macro"
description = "Macro implementations of cli-compose"
version = "0.1.0-alpha.0"
authors = ["Kodai Matsumoto <nobita.0918@gmail.com>"]
repository = "https://github.com/0918nobita/cli-compose"
license = "MIT"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.57"
bae = "0.1.7"
convert_case = "0.5.0"
derive_more = "0.99.17"
proc-macro2 = "1.0.39"
quote = "1.0.18"

[dependencies.syn]
version = "1.0.96"
features = ["full", "extra-traits"]

[dev-dependencies]
insta = "1.14.1"
