[package]
name = "playground"
version = "0.1.0"
authors = ["Kodai Matsumoto <nobita.0918@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
cli-compose = { path = "../", features = [ "runtime" ] }
playground-opts = { path = "./opts" }

[build-dependencies]
cli-compose = { path = "../", features = [ "codegen" ] }
playground-opts = { path = "./opts" }
