[package]
name = "cli-rs-macro"
version = "0.1.0"
authors = ["Kodai Matsumoto <nobita.0918@gmail.com>"]
license = "MIT"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.36"
quote = "1.0.15"
syn = { version = "1.0.86", features = ["full", "extra-traits"] }
thiserror = "1.0.30"
